# papero

./: Cargo.toml  build.rs  prefix.md  readme.md
.github/workflows/: rust.yml
docs/: _config.yml  index.html
output/: readme.md
papero_old_algorithms/: Bet2-old.rs  Dalet.rs  Gimel.rs  New.rs  ZZZ-spiral-hsv-cant-be-bothers.rs  hilbert.rs  imaginary_hsva.rs  imaginary_lch.rs  isac.rs  linear.rs  mandel.rs  mandelbrot_multi_norm.rs  maze.rs  mod.rs  modular.rs  multi_agile.rs  neo-main.rs  pinski.rs  spiral.rs  spiralal.rs  u_gradient.rs  uradient.rs  vector.rs  waterfall.rs  wave.rs
papero_old_algorithms/Already done/: Alef.rs  Bet.rs  Bet2.rs  imaginary.rs  lin.rs  mandel-main.rs  mandelbrot_multi.rs  neo.rs
papero_old_algorithms/Never finished/: ZZZ-iask.rs  wave.rs
papero_old_algorithms/No can do/: flow_nannou.rs
papero_old_algorithms/Too slow/: maze.rs  modular_set.rs
src/: image_manager.rs  main.rs
src/algorithms/: mod.rs  spiral.rs
src/algorithms/complex/: hilbert.rs  mandel.rs  mod.rs
src/algorithms/maths/: hilbert.rs  julia.rs  mandel.rs  mod.rs  pinski.rs
src/algorithms/particle/: domain.rs  flow.rs  mod.rs  particle.rs  particle_trait.rs  voronoi.rs
src/algorithms/pixel/: bitwise.rs  boring.rs  domain.rs  gradient_test.rs  mod.rs  noise.rs  spiral.rs  spiral_og.rs  v.rs  waterfall.rs
src/algorithms/shapes/: composite.rs  delaunay.rs  halftone.rs  hex.rs  mod.rs  rotated_grid.rs  shape.rs  testing.rs
src/utils/: colour_utils.rs  image_manager.rs  mod.rs  noise.rs  num_utils.rs  upscale.rs
src/utils/random_utils/: mod.rs  (+2 more)
(+6 files in other folders)
