[package]
name = "papero"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 3               # Use slightly better optimizations.

[build-dependencies]
winres = "0.1.11"

[dependencies]
image = "0.25.2"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.10.0"
wallpaper = "3.2.0"
num = "0.4.3"
palette = "0.7.6"
strum = { version = "0.26", features = ["derive"] }
fast_hilbert = "2.0.0"
noise = "0.9.0"
glam = "0.29.2"
voronator = "0.2.1"
